@@ -7,7 +7,6 @@ import static org.mockito.Mockito.CALLS_REAL_METHODS;
 import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.mock;
 
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import org.junit.Before;
@@ -31,16 +30,16 @@ public class TreeTest {
     node1 = mock(Tree.class, CALLS_REAL_METHODS);
     node2 = mock(Tree.class, CALLS_REAL_METHODS);
     node3 = mock(Tree.class, CALLS_REAL_METHODS);
-    doReturn(Arrays.asList(node1, node2, node3)).when(root).getChildren();
+    doReturn(List.of(node1, node2, node3)).when(root).getChildren();
     node21 = mock(Tree.class, CALLS_REAL_METHODS);
     node22 = mock(Tree.class, CALLS_REAL_METHODS);
-    doReturn(Arrays.asList(node21, node22)).when(node2).getChildren();
+    doReturn(List.of(node21, node22)).when(node2).getChildren();
   }
 
   @Test
   public void testTraverseAndFindDescendant() {
     List<Tree> path = root.traverseAndFind(node -> node == node21);
-    assertThat(path, is(Arrays.asList(root, node2, node21)));
+    assertThat(path, is(List.of(root, node2, node21)));
   }
 
   @Test
